--- a/css/style.css
+++ b/css/style.css
@@ -227,22 +227,53 @@ a {
 /* STRATEGIC PLANNING SECTION */
 #s-planning {
   background-color: #9792E4;
-  /* debug */
-  min-height: 500px;
 }
 
 .s-p-row {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 4rem;
 }
 
 .s-p-col {
   width: 100%;
-  
-  /* debug */
-  min-height: 250px;
-  background-color: gray;
+}
+
+.planning-content {
+  color: white;
+}
+
+.planning-content h2{
+  font-size: 2rem;
+  padding: 2rem 0;
+}
+
+.card-planning {
+  background-color: white;
+  margin-top: 1rem;
+  padding: 2rem;
+  text-align: center;
+  border-radius: 3rem;
+}
+.card-planning h3 {
+  padding-top: 1rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+}
+
+.card-planning p {
+  font-style: italic;
+  padding: 1.5rem 0;
+}
+
+.arrow-download {
+  display: inline-block;
+  background-color: #9792E4;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  font-size: 2rem;
 }
 
 /* DESKTOP MEDIA: 992px */
@@ -251,10 +282,11 @@ a {
   flex-direction: row;
  }
 
+ #s-planning .container {
+  width: 55%;
+ }
  .s-p-col{
   width: 50%;
-  /* debug */
-  height: 500px;
  }
 }
 
