--- a/css/style.css
+++ b/css/style.css
@@ -311,6 +311,18 @@ a {
   background-color: #9792E4;
 }
 
+.title-col {
+  color: gray;
+  text-align: center;
+  padding: 1rem 0 2rem;
+}
+
+.title-col h2 {
+  color: #9792E4;
+  font-size: 3rem;
+  padding: 2rem 0;
+}
+
 #testimonials .card{
   text-align: center;
   padding: .4rem ;
